# cs-bridge-2020-hw4

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  check.py  check.sh  make_test_cases.py  prepare.sh  question.py
q1/: CMakeLists.txt  expected-output.txt  expected-template.txt  main.cpp  question.md  test-cases.json
q1/test-cases/: expected-output1.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt
q2/: .gitignore  CMakeLists.txt  expected-output-1.txt  expected-output-2.txt  expected-template.txt  main.cpp  question.md  test-cases.json
q2/test-cases/: expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt
q3/: main.cpp  question.md  test-cases.json
q4/: expected-output.txt  expected-template.txt  input.txt  main.cpp  question.md  test-cases.json
q5/: expected-template.txt  main.cpp  question.md  test-cases.json
q6/: define_test_cases.py  main.cpp  question.md  test-cases.json
skel/: main.cpp  test-cases.json
