cmake_minimum_required(VERSION 3.15)
project(hw)

add_subdirectory("${PROJECT_SOURCE_DIR}/q1" "${PROJECT_SOURCE_DIR}/q1/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q2" "${PROJECT_SOURCE_DIR}/q2/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q3" "${PROJECT_SOURCE_DIR}/q3/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q4" "${PROJECT_SOURCE_DIR}/q4/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q5" "${PROJECT_SOURCE_DIR}/q5/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q6" "${PROJECT_SOURCE_DIR}/q6/cmake-build")
